force-app/main/default/objects/Engineer__c/Engineer__c.object-meta.xml
<CustomObject>
    <label>技術者</label>
    <nameField>
        <label>技術者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>