force-app/main/default/objects/Engineer__c/fields/EngineerID__c.field-meta.xml
<CustomField>
    <fullName>EngineerID__c</fullName>
    <displayFormat>ENG-{0000000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>