force-app/main/default/objects/Engineer__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>資格</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>１級電気工事施工管理技士</fullName>
            </value>
            <value>
                <fullName>２級電気工事施工管理技士</fullName>
            </value>
            <value>
                <fullName>第一種電気工事士</fullName>
            </value>
            <value>
                <fullName>監理技術者（電気）</fullName>
            </value>
            <value>
                <fullName>監理技術者（電気通信）</fullName>
            </value>
            <value>
                <fullName>監理技術者（その他）</fullName>
            </value>
            <value>
                <fullName>主任技術者（電気）</fullName>
            </value>
            <value>
                <fullName>主任技術者（電気通信）</fullName>
            </value>
            <value>
                <fullName>主任技術者（その他）</fullName>
            </value>
            <value>
                <fullName>電検（２種）</fullName>
            </value>
            <value>
                <fullName>電検（３種）</fullName>
            </value>
            <value>
                <fullName>所有資格なし</fullName>
                <label>保有資格なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>