force-app/main/default/objects/Engineer__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>工事実績（竣工年月、工事名）</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>